Color Primary GREEN (DONE)

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -10,6 +10,7 @@
         android:id="@+id/b7"
         android:layout_width="0dp"
         android:layout_height="0dp"
+        android:onClick="insertarFicha"
         app:iconTint="#C6C6C6"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintDimensionRatio="w,1:1"
@@ -23,6 +24,7 @@
         android:id="@+id/b8"
         android:layout_width="0dp"
         android:layout_height="0dp"
+        android:onClick="insertarFicha"
         app:iconTint="#C6C6C6"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintDimensionRatio="w,1:1"
@@ -35,6 +37,7 @@
         android:id="@+id/b9"
         android:layout_width="0dp"
         android:layout_height="0dp"
+        android:onClick="insertarFicha"
         app:iconTint="#C6C6C6"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintDimensionRatio="w,1:1"
@@ -47,6 +50,7 @@
         android:id="@+id/b4"
         android:layout_width="0dp"
         android:layout_height="0dp"
+        android:onClick="insertarFicha"
         app:layout_constraintBottom_toTopOf="@+id/b7"
         app:layout_constraintDimensionRatio="w,1:1"
         app:layout_constraintEnd_toStartOf="@+id/b5"
@@ -57,6 +61,7 @@
         android:id="@+id/b5"
         android:layout_width="0dp"
         android:layout_height="0dp"
+        android:onClick="insertarFicha"
         app:layout_constraintBottom_toTopOf="@+id/b8"
         app:layout_constraintDimensionRatio="w,1:1"
         app:layout_constraintEnd_toStartOf="@+id/b6"
@@ -67,6 +72,7 @@
         android:id="@+id/b6"
         android:layout_width="0dp"
         android:layout_height="0dp"
+        android:onClick="insertarFicha"
         app:layout_constraintBottom_toTopOf="@+id/b9"
         app:layout_constraintDimensionRatio="w,1:1"
         app:layout_constraintEnd_toEndOf="parent"
@@ -77,6 +83,7 @@
         android:id="@+id/b1"
         android:layout_width="0dp"
         android:layout_height="0dp"
+        android:onClick="insertarFicha"
         app:layout_constraintBottom_toTopOf="@+id/b4"
         app:layout_constraintDimensionRatio="w,1:1"
         app:layout_constraintEnd_toStartOf="@+id/b2"
@@ -87,6 +94,7 @@
         android:id="@+id/b2"
         android:layout_width="0dp"
         android:layout_height="0dp"
+        android:onClick="insertarFicha"
         app:layout_constraintBottom_toTopOf="@+id/b5"
         app:layout_constraintDimensionRatio="w,1:1"
         app:layout_constraintEnd_toStartOf="@+id/b3"
@@ -97,6 +105,7 @@
         android:id="@+id/b3"
         android:layout_width="0dp"
         android:layout_height="0dp"
+        android:onClick="insertarFicha"
         app:layout_constraintBottom_toTopOf="@+id/b6"
         app:layout_constraintDimensionRatio="w,1:1"
         app:layout_constraintEnd_toEndOf="parent"
